2003-06-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sigtimedwait.c: If SIGCANCEL is defined
	and part of the incoming set, create a temporary set without this
	signal.
	* sysdeps/unix/sysv/linux/sigwait.c: Likewise.
	* sysdeps/unix/sysv/linux/sigwaitinfo.c: Likewise.

	* sysdeps/unix/sysv/linux/sleep.c: Use CANCELLATION_P if defined before
	returning because seconds==0.  Add __builtin_expect.

2003-06-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Add unwind information.

	* sysdeps/unix/sysv/linux/wait.c (__libc_wait): Fix type of result
	variable.

2003-06-16  Thorsten Kukuk  <kukuk@suse.de>

	* include/libc-symbols.h: Add static_link_warning macro.
	* grp/initgroups.c: Print linker warning if this function
	is called in a static linked binary.
	* nss/getXXbyYY.c: Likewise.
	* nss/getXXbyYY_r.c: Likewise.
	* nss/getXXent.c: Likewise.
	* nss/getXXent_r.c: Likewise.
	* sysdeps/posix/getaddrinfo.c: Likewise.

2003-06-16  Bruno Haible  <bruno@clisp.org>

	* iconvdata/gconv-modules (ISO-8859-15): Add aliases ISO_8859-15,
	LATIN-9.
	(ISO-8859-16): Add aliases ISO_8859-16:2001, ISO_8859-16.
	(IBM1047): Add alias IBM-1047.
	(GBK): Add aliases MS936, WINDOWS-936.

2003-06-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/xstatconv.c (__xstat_conv): Define even if
	defined __ASSUME_STAT64_SYSCALL && defined XSTAT_IS_XSTAT64.
	(__xstat64_conv): Change xstat_conv to __xstat_conv.

2003-06-16  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-639.def: Update from current official ISO 639.

	* math/tgmath.h (__TGMATH_UNARY_IMAG_ONLY): Removed.

2003-06-15  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/feenablxcpt.c (feenableexcept): Correct setting
	of MXCSR.
	* sysdeps/i386/fpu/fedisblxcpt.c (fedisableexcept): Likewise.
	* sysdeps/i386/fpu/feholdexcpt.c (feholdexcept): Likewise.
	Reported by Arnaud Desitter <arnaud.desitter@geography.oxford.ac.uk>.
