@@ -1,0 +1,2 @@
+#include <nptl/pthreadP.h>
+#include "../../../../../sysdeps/unix/sysv/linux/sigwait.c"
